<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/nav_membership"
            android:icon="@drawable/ic_drawer_premium"
            android:title="@string/menu_membership"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_promos"
            android:icon="@drawable/ic_drawer_promos"
            android:title="@string/menu_promo"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_free_ride"
            android:icon="@drawable/ic_drawer_freeride"
            android:title="@string/menu_free_ride"
            app:showAsAction="always"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/menu_settings"
            app:showAsAction="always"/>
</menu>