<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_primary_color"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/nav_horizontal_margin"
    android:paddingTop="@dimen/nav_vertical_margin"
    android:paddingRight="@dimen/nav_horizontal_margin"
    android:paddingBottom="@dimen/nav_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_profile_margin_top"
        android:text="@string/nav_default_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/nav_profile_photo_size"
        android:layout_height="@dimen/nav_profile_photo_size"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_drawer_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_default_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />


    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_default_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />


    <ImageView
        android:id="@+id/iv_map"
        android:layout_width="@dimen/nav_profile_icons_size"
        android:layout_height="@dimen/nav_profile_icons_size"
        android:layout_marginTop="@dimen/nav_profile_control_vertical_space"
        android:src="@drawable/ic_drawer_map"
        app:layout_constraintEnd_toStartOf="@id/iv_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone" />

    <ImageView
        android:id="@+id/iv_wallet"
        android:layout_width="@dimen/nav_profile_icons_size"
        android:layout_height="@dimen/nav_profile_icons_size"
        android:layout_marginTop="@dimen/nav_profile_control_vertical_space"
        android:src="@drawable/ic_drawer_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_map"
        app:layout_constraintTop_toBottomOf="@id/tv_phone" />

    <TextView
        android:id="@+id/tv_map"
        android:layout_width="@dimen/nav_profile_icons_size"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nav_map_txt"
        app:layout_constraintEnd_toEndOf="@id/iv_map"
        app:layout_constraintStart_toStartOf="@id/iv_map"
        app:layout_constraintTop_toBottomOf="@id/iv_map" />

    <TextView
        android:id="@+id/tv_wallet"
        android:layout_width="@dimen/nav_profile_icons_size"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nav_wallet_txt"
        app:layout_constraintEnd_toEndOf="@id/iv_wallet"
        app:layout_constraintStart_toStartOf="@id/iv_wallet"
        app:layout_constraintTop_toBottomOf="@id/iv_wallet" />

</androidx.constraintlayout.widget.ConstraintLayout>