<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/login_horizontal_margin"
    android:paddingTop="@dimen/login_vertical_margin"
    android:paddingRight="@dimen/login_horizontal_margin"
    android:paddingBottom="@dimen/login_vertical_margin"
    tools:context=".ui.fragment.login.LoginFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/login_iv_logo_width"
        android:layout_height="@dimen/login_iv_logo_height"
        android:layout_marginTop="@dimen/login_margin_top"
        android:src="@drawable/ic_splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_control_left_margin"
        android:text="@string/login_firstname"
        app:layout_constraintBottom_toBottomOf="@id/til_login_firstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_login_firstname"
        android:layout_marginStart="@dimen/login_control_left_margin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_firstname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_control_horizontal_space"
        android:layout_marginTop="@dimen/login_control_vertical_space"
        android:layout_marginRight="@dimen/login_control_right_margin"
        android:backgroundTint="@color/app_primary_color"
        android:ems="10"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_firstname"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:layout_marginStart="@dimen/login_control_horizontal_space"
        android:layout_marginEnd="@dimen/login_control_right_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_firstname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_control_left_margin"
        android:layout_marginLeft="@dimen/login_control_left_margin"
        android:text="@string/login_lastname"
        app:layout_constraintBottom_toBottomOf="@id/til_login_lastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_login_lastname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_lastname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_control_horizontal_space"
        android:layout_marginLeft="@dimen/login_control_horizontal_space"
        android:layout_marginTop="@dimen/login_control_vertical_space"
        android:layout_marginEnd="@dimen/login_control_right_margin"
        android:layout_marginRight="@dimen/login_control_right_margin"
        android:ems="10"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_lastname"
        app:layout_constraintTop_toBottomOf="@id/til_login_firstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_lastname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/login_horizontal_margin"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_control_left_margin"
        android:layout_marginLeft="@dimen/login_control_left_margin"
        android:text="@string/login_email"
        app:layout_constraintBottom_toBottomOf="@id/til_login_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_login_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_control_horizontal_space"
        android:layout_marginLeft="@dimen/login_control_horizontal_space"
        android:layout_marginTop="@dimen/login_control_vertical_space"
        android:layout_marginEnd="@dimen/login_control_right_margin"
        android:layout_marginRight="@dimen/login_control_right_margin"
        android:ems="10"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/til_login_lastname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/login_horizontal_margin"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_login_google"
        android:layout_width="@dimen/login_social_btn_size"
        android:layout_height="@dimen/login_social_btn_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_social_btn_margin_top"
        android:background="@drawable/ic_google"
        app:layout_constraintEnd_toStartOf="@id/btn_login_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_login_email"

        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_login_facebook"
        android:layout_width="@dimen/login_social_btn_size"
        android:layout_height="@dimen/login_social_btn_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_social_btn_margin_top"
        android:background="@drawable/ic_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_login_google"
        app:layout_constraintTop_toBottomOf="@id/til_login_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_control_vertical_space"
        android:text="@string/login_login_buttontext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_facebook" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_control_vertical_space"
        android:text="@string/login_signup_buttontext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>